--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+html{
+    background-color: #282b30;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}   
