--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -7,7 +7,7 @@
         <div class="contraseña, input">
             <input type="password" formControlName="password" placeholder="Contraseña...">
         </div>
-        <div style="margin-bottom: 5%;"><a (click)="register()">Inicia sesión aqui.</a></div>
+        <div style="margin-bottom: 5%;"><a (click)="register()">Registrate aqui.</a></div>
         <input class="button" type="submit" value="Enviar">
     </form>
 </div>
