--- a/src/app/component/menu/menu.component.html
+++ b/src/app/component/menu/menu.component.html
@@ -1,4 +1,4 @@
-<button (click)="onClick"> Log-out </button>
+<button (click)="onClick()"> Log-out </button>
 <table class="table">
     <thead>
         <tr>
