--- a/src/app/component/menu/menu.component.css
+++ b/src/app/component/menu/menu.component.css
@@ -1,3 +1,23 @@
-.table{
+#meun{
+    color: azure
+}
+.botonLogout{
+    padding: 10px;
+    background-color: #009900;
     color: azure;
+    position: absolute;
+    margin-left: 1%;
+    border: none;
+    box-shadow: rgba(100, 248, 54, 0.4) 5px 5px, rgba(100, 248, 54, 0.3) 10px 10px, rgba(100, 248, 54, 0.2) 15px 15px, rgba(100, 248, 54, 0.1) 20px 20px, rgba(100, 248, 54, 0.05) 25px 25px;
+    font-weight: bold;
+    font-size: 15px;
+    cursor: pointer;
+}
+h1{
+    margin: auto;
+    text-align: center;
+    margin-bottom: 3%;
+}
+.table{
+    margin: auto;
 }
